
		CHANGES in `mboost' VERSION 0.6-2 (2007-07-xx)

  o  move `mboost' to R-forge


		CHANGES in `mboost' VERSION 0.6-1 (internal)

  o  gamboost() now allows for user-specified base learners
     via the formula interface

  o  gamboost.matrix(x = x, ...) requires colnames being set 
     for `x'

  o  na.action = na.omit fix for g{al}mboost()


		CHANGES in `mboost' VERSION 0.5-8 (2007-05-31)

  o  gamboost(..., weights = w) was broken


		CHANGES in `mboost' VERSION 0.5-7 (2007-05-30)

  o  extract response correctly in fitted.blackboost

  o  hatvalues (and thus AICs) for GLMs with centering of 
     covariates may have been wrong since version 0.5-0

  o  add paper examples to tests


		CHANGES in `mboost' VERSION 0.5-6 (2007-05-07)

  o  fix Rd problems


		CHANGES in `mboost' VERSION 0.5-5 (2007-04-25)

  o  `westbc' regenerated

  o  LazyLoad: yes (no SaveImage: yes)


		CHANGES in `mboost' VERSION 0.5-4 (2007-04-18)

  o  plot() method for `glmboost' objects visualizing the
     coefficient path (feature request by Axel Benner <benner@dkfz.de>).

  o  predict(newdata = <matrix>) was broken for gamboost(), 
     thanks to Max Kuhn <Max.Kuhn@pfizer.com> for spotting this.


		CHANGES in `mboost' VERSION 0.5-3 (2007-03-23)

  o  predict() for gamboost(..., dfbase = 1) was not working correctly

  o  small performance and memory improvements for glmboost()


		CHANGES in `mboost' VERSION 0.5-2 (2007-02-28)

  o  some performance improvements for `glmboost()'

  o  blackboost() is now generic with formula and x, y interface

  o  plot() method for cvrisk() and AIC() output now allows for ylim
     specification without troubles


		CHANGES in `mboost' VERSION 0.5-1 (2007-02-02)

  o  depends party 0.9-9


		CHANGES in `mboost' VERSION 0.5-0 (2007-01-30)

  o  new `baselearner' argument to `gamboost' allowing to
     specify difference component-wise base-learners to
     be used. Currently implemented: "ssp" for smoothing splines