@@ -21,6 +21,7 @@ S3method(gamboost, matrix)
 S3method(blackboost, formula)
 S3method(blackboost, matrix)
 S3method(print, gamboost)
+S3method(plot, gamboost)
 S3method(hatvalues, gb)
 S3method(hatvalues, glmboost)
 S3method(fitted, gb)
